--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "3.8"
 
 services:
-  db:
+  apollo-music-db:
     image: "mariadb:10.6"
-    container_name: "db"
+    container_name: "apollo-music-db"
     restart: "always"
     environment:
       MARIADB_ROOT_PASSWORD: "hello"
-      MARIADB_DATABASE: "salsa"
+      MARIADB_DATABASE: "apollo-music"
     ports:
       - "3306"
     volumes:
@@ -15,15 +15,15 @@ services:
       - db-data:/var/lib/mysql
       # - ./server/data/db/init.sql:/docker-entrypoint-initdb.d
     networks:
-      - salsa
+      - apollo-music
 
-  app:
+  apollo-music-app:
     build:
       dockerfile: Dockerfile
       context: "./server"
-    container_name: "app"
+    container_name: "apollo-music-app"
     depends_on:
-      - db
+      - apollo-music-db
     # restart: "unless-stopped"
     restart: "always"
     ports:
@@ -31,14 +31,14 @@ services:
     stdin_open: true
     tty: true
     networks:
-      - salsa
+      - apollo-music
 
-  client:
+  apollo-music-client:
     build:
       dockerfile: Dockerfile
       context: "./client"
     depends_on:
-      - app
+      - apollo-music-app
     # restart: "unless-stopped"
     restart: "always"
     ports:
@@ -51,4 +51,4 @@ volumes:
   db-data:
 
 networks:
-  salsa: {}
+  apollo-music: {}
