CHORE: added too much stuff that I forgot

--- a/server/.env.example
+++ b/server/.env.example
@@ -4,9 +4,13 @@ DB_PASSWORD="hello"
 
 PORT="8080"
 MACHINE_IP=""
-ALLOWED_CLIENTS="*"
+ALLOWED_CLIENTS="localost:8081"
 JWT_SECRET="top secret"
 
 DEVELOPMENT=true
 
+MAILER_HOST=""
+MAILER_PORT=""
+MAILER_FROM=""
+MAILER_PASSWORD=""
 MUSIC_DIRECTORY="."
