FIX: that guy again 🛠

--- a/server/.env.example
+++ b/server/.env.example
@@ -4,10 +4,12 @@ DB_PASSWORD="hello"
 
 PORT="8080"
 MACHINE_IP=""
-ALLOWED_CLIENTS="localost:8081"
+ALLOWED_CLIENTS="http://localhost:8081,http://localhost:8082"
 JWT_SECRET="top secret"
 
 DEVELOPMENT=true
+
+STRIPE_SK=""
 
 MAILER_HOST=""
 MAILER_PORT=""
