--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     restart: "always"
     environment:
       MARIADB_ROOT_PASSWORD: "hello"
-      MARIADB_DATABASE: "apollo-music"
+      MARIADB_DATABASE: "apollo_music"
     ports:
       - "3306"
     volumes:
@@ -30,10 +30,10 @@ services:
     env_file: ./server/.env
     environment:
       MUSIC_DIRECTORY: "/music"
+      DEVELOPMENT: "false"
     volumes:
       - music-dir:/music
     stdin_open: true
-    tty: true
     networks:
       - apollo-music
 
@@ -48,7 +48,18 @@ services:
     ports:
       - "1412:3000"
     stdin_open: true
-    tty: true
+
+  apollo-music-client-landing:
+    build:
+      dockerfile: Dockerfile
+      context: "./landing"
+    depends_on:
+      - apollo-music-backend
+    # restart: "unless-stopped"
+    restart: "always"
+    ports:
+      - "1413:8082"
+    env_file: ./landing/.env
 
 volumes:
   db-config:
