CHORE: oh the classic something commit ⚙️

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,19 +1,15 @@
 DB_HOST="apollo-music-db"
 DB_USER="root"
 DB_PASSWORD="hello"
-
 PORT="8080"
 MACHINE_IP=""
-ALLOWED_CLIENTS="http://localhost:8081,http://localhost:8082"
+ALLOWED_CLIENTS="http://localhost:1412,http://localhost:1413"
 JWT_SECRET="top secret"
-
 DEVELOPMENT=true
-
 STRIPE_SK=""
-
 MAILER_HOST=""
 MAILER_PORT=""
 MAILER_FROM=""
 MAILER_PASSWORD=""
-FRONTEND_ADDRESS=""
+FRONTEND_ADDRESS="http://localhost:1412"
 MUSIC_DIRECTORY="."
