CHORE: added max upload fi sizele env ⚙️

--- a/server/.env.example
+++ b/server/.env.example
@@ -13,3 +13,4 @@ MAILER_FROM=""
 MAILER_PASSWORD=""
 FRONTEND_ADDRESS="http://localhost:1412"
 MUSIC_DIRECTORY="."
+MAX_SINGLE_FILE_SIZE="20971520" # 20MiB
