--- a/client/static/manifest.json
+++ b/client/static/manifest.json
@@ -1,6 +1,6 @@
 {
-	"name": "Apollo",
-	"short_name": "Apollo",
+	"name": "Apollo Music",
+	"short_name": "Apollo Music",
 	"start_url": "/",
 	"icons": [
 		{
@@ -14,22 +14,22 @@
 			"type": "image/png"
 		},
 		{
-			"src": "/android-chrome-512x512.png",
-			"sizes": "512x512",
+			"src": "/android-chrome-384x384.png",
+			"sizes": "384x384",
 			"type": "image/png"
 		}
 	],
-	"theme_color": "#121212",
-	"background_color": "#121212",
+	"theme_color": "#051220",
+	"background_color": "#051220",
 	"display": "standalone",
 	"shortcuts": [
 		{
 			"name": "Albums",
 			"short_name": "Albums",
 			"description": "View albums",
-			"url": "/albums",
+			"url": "/library/music/albums",
 			"icons": [{ "src": "favicon-32x32.png", "sizes": "32x32" }]
 		}
 	],
-	"description": "Apollo the coolest cloud music player!"
+	"description": "Apollo Music, the coolest cloud music player!"
 }
