CHORE: added whole db dsn ⚙️

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,7 @@
 DB_HOST="apollo-music-db"
 DB_USER="root"
 DB_PASSWORD="hello"
+DB_DSN=""
 PORT="8080"
 MACHINE_IP=""
 ALLOWED_CLIENTS="http://localhost:1412,http://localhost:1413"
